axactor/tests/ui/reserved_name.stderr
error: 'stop' is reserved by axactor ref API; choose a different #[msg] name
 --> tests/ui/reserved_name.rs:8:18
  |
8 |     pub async fn stop(&self) {}
  |                  ^^^^
