axactor/tests/ui/reserved_name.rs
use axactor::actor;

pub struct CollisionActor;

#[actor]
impl CollisionActor {
    #[msg]
    pub async fn stop(&self) {}
}

fn main() {}